spacing issue with h3

--- a/sites/all/themes/s2015/sass/s2015.hacks.scss
+++ b/sites/all/themes/s2015/sass/s2015.hacks.scss
@@ -210,6 +210,7 @@ body {
                 font-size: 1.125rem;
                 font-weight: bold;
                 line-height: 1.5rem; 
+                margin-top:0;
             }
         }
     }
